fix: add pagination to listrole
The listrole command had a limit of 1000 users, and we have 2000~
members. This adds a pagination so we can get the full user list

--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -21,3 +21,15 @@ jobs:
       - name: Build
         run: |
           go build
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t ghcr.io/lyledouglass/djzth-utilities-bot:${{ github.sha }}-ci .
+          docker push ghcr.io/lyledouglass/djzth-utilities-bot:${{ github.sha }}-ci
